home page draft

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
 
     <a class="site-title" href="{{ site.baseurl }}/">
-      <img src="/assets/logo.png" alt="{{ site.title }}">
+      <img src="/assets/logo/logob.png" alt="The {{ site.title }} logo" title="{{ site.title }}" height="120">
     </a>
 
     <nav class="site-nav">
