--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
 <footer class="site-footer">
+  <div class="wrapper">
+    &copy; Copyright {{ site.title }} 2013 &mdash; {{ site.time | date: "%Y" }}
+  </div>
 </footer>
 <script type="text/javascript" src="/js/main.js"></script>
