--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,9 +9,9 @@
     <nav class="site-nav">
       <div class="trigger">
         {% for page in site.pages %}
-          {% if page.title == 'Archive' %}
+          {% unless page.title contains 'Tagged' %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
+          {% endunless %}
         {% endfor %}
       </div>
     </nav>
