--- a/css/main.scss
+++ b/css/main.scss
@@ -22,10 +22,11 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    960px;
+// 100%, because folks can resize their own browsers.
+$content-width:    100%;
 
-$on-palm:          600px;
-$on-laptop:        960px;
+$on-palm:          100%;
+$on-laptop:        100%;
 
 
 
