--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,17 +2,28 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">
-      <img src="/assets/logo/logob.png" alt="The {{ site.title }} logo" title="{{ site.title }}" height="120">
-    </a>
-
     <nav class="site-nav">
       <div class="trigger">
-        {% for page in site.pages %}
-          {% unless page.title contains 'Tagged' %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endunless %}
+        <ul>
+        {% assign sorted_pages = site.pages | sort:"title" %}
+        {% for p in sorted_pages %}
+          {% if p.title %}
+            {% unless p.title contains 'Tagged' %}
+            <li>
+              <a class="page-link" href="{{ p.url | prepend: site.baseurl }}">
+
+                {% if p.title == page.title %}
+                  <strong>{{ p.title }}</strong>
+                {% else %}
+                  {{ p.title }}
+                {% endif %}
+
+              </a>
+            </li>
+            {% endunless %}
+          {% endif %}
         {% endfor %}
+        </ul>
       </div>
     </nav>
 
