--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -16,15 +16,9 @@
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
-
-    &,
-    &:visited {
-        color: $grey-color-dark;
-    }
 }
 
 .site-nav {
-    float: right;
     line-height: 56px;
 
     .menu-icon {
@@ -32,7 +26,6 @@
     }
 
     .page-link {
-        color: $text-color;
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the first one
@@ -41,12 +34,18 @@
         }
     }
 
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 30px;
+    ul {
+      margin-left: 10px;
+    }
+
+    .trigger ul li {
+      list-style: none;
+      display: inline;
+      padding-right: 20px;
+    }
+
+    @include media-query($on-device) {
         background-color: $background-color;
-        text-align: right;
 
         .menu-icon {
             display: block;
@@ -68,13 +67,12 @@
         }
 
         .trigger {
-            clear: both;
-            display: none;
+          margin: 0;
         }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
+        .trigger ul li {
+          list-style: disc;
+          dislpay: list-item;
+          padding: 0;
         }
 
         .page-link {
@@ -133,29 +131,6 @@
     width:         calc(45% - (#{$spacing-unit} / 2));
 }
 
-@include media-query($on-laptop) {
-    .footer-col-1,
-    .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width:         calc(50% - (#{$spacing-unit} / 2));
-    }
-
-    .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-}
-
-@include media-query($on-palm) {
-    .footer-col {
-        float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-}
-
-
-
 /**
  * Page content
  */
@@ -199,10 +174,6 @@
     font-size: 42px;
     letter-spacing: -1px;
     line-height: 1;
-
-    @include media-query($on-laptop) {
-        font-size: 36px;
-    }
 }
 
 .post-content {
@@ -210,25 +181,13 @@
 
     h2 {
         font-size: 32px;
-
-        @include media-query($on-laptop) {
-            font-size: 28px;
-        }
     }
 
     h3 {
         font-size: 26px;
-
-        @include media-query($on-laptop) {
-            font-size: 22px;
-        }
     }
 
     h4 {
         font-size: 20px;
-
-        @include media-query($on-laptop) {
-            font-size: 18px;
-        }
     }
 }
