itemise consulting clients in CV

--- a/css/main.scss
+++ b/css/main.scss
@@ -48,5 +48,6 @@ $on-device:          800px;
         "base",
         "layout",
         "tags",
-        "syntax"
+        "syntax",
+        "print"
 ;
