--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -90,15 +90,18 @@ h1, h2, h3, h4, h5, h6 {
  */
 a {
     color: $brand-color;
+    background-color: $brand-color-l;
+    padding: 3px;
     text-decoration: none;
 
     &:visited {
       color: $brand-color-alt;
+      background-color: $brand-color-alt-l;
     }
 
     &:hover {
         color: $brand-color;
-        text-decoration: underline;
+        background-color: $brand-color-l;
     }
 }
 
