--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -16,6 +16,7 @@
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
+    background-color: $background-color !important;
 }
 
 .site-nav {
