remove TOC with CSS when printing

--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -17,4 +17,12 @@
     #juan-m-uys::before {
       content: "Curriculum Vitae of ";
     }
+    article {
+        p:first-of-type {
+            display: none;
+        }
+        ul:first-of-type {
+            display: none;
+        }
+    }
 }
